# triangles

./: CMakeLists.txt  README.md  geometry_utils.cpp  geometry_utils.h  intersections.cpp  intersections.h  main.cpp  object3D.h  point3D.h  segment3D.h  tests_runner.cpp  tests_runner.h  triangle3D.h
tests/: testCase.txt
